--- a/bare_conf.tex
+++ b/bare_conf.tex
@@ -322,26 +322,29 @@
 % Do not put math or special symbols in the title.
 \title{How Important are Usage Examples in REST API Documentation?}
 
-
 % author names and affiliations
 % use a multiple column layout for up to three different
 % affiliations
-\author{\IEEEauthorblockN{Michael Shell}
-\IEEEauthorblockA{School of Electrical and\\Computer Engineering\\
-Georgia Institute of Technology\\
-Atlanta, Georgia 30332--0250\\
-Email: http://www.michaelshell.org/contact.html}
+\author{\IEEEauthorblockN{S M Sohan, Frank Maurer\IEEEauthorrefmark{1}}
+\IEEEauthorblockA{\IEEEauthorrefmark{1}
+Dept. of Computer Science\\
+University of Calgary\\
+Canada\\
+\{smsohan, frank.maurer\}@ucalgary.ca}
 \and
-\IEEEauthorblockN{Homer Simpson}
-\IEEEauthorblockA{Twentieth Century Fox\\
-Springfield, USA\\
-Email: homer@thesimpsons.com}
+\IEEEauthorblockN{Craig Anslow}
+\IEEEauthorblockA{School of Eng. and Computer Science\\
+Victoria University of Wellington\\
+New Zealand\\
+craig@ecs.vuw.ac.nz}
 \and
-\IEEEauthorblockN{James Kirk\\ and Montgomery Scott}
-\IEEEauthorblockA{Starfleet Academy\\
-San Francisco, California 96678--2391\\
-Telephone: (800) 555--1212\\
-Fax: (888) 555--1212}}
+\IEEEauthorblockN{Martin Robillard}
+\IEEEauthorblockA{
+School of Computer Science\\
+McGill University\\
+Canada\\
+martin@cs.mcgill.ca}
+}
 
 % conference papers do not typically use \thanks and this command
 % is locked out in conference mode. If really needed, such as for
@@ -399,7 +402,17 @@ Fax: (888) 555--1212}}
 
 \section{Introduction}
 \section{Methodolody}
-\subsection{Research Goals} % (fold)
+\subsection{Research Goals}
+
+This research is aimed at answering the following research questions:
+
+\begin{itemize}
+  \item What impact does usage examples have on REST API client developer productivity?
+  \item What what problems API client developers face when using a REST API where documentation lacks usage examples?
+\end{itemize}
+
+
+
 \subsection{Requirements} % (fold)
 \subsection{Study Object} % (fold)
 \subsection{Study Design} % (fold)
