--- a/bare_conf.tex
+++ b/bare_conf.tex
@@ -407,13 +407,21 @@ martin@cs.mcgill.ca}
 This research is aimed at answering the following research questions:
 
 \begin{itemize}
-  \item What impact does usage examples have on REST API client developer productivity?
-  \item What what problems API client developers face when using a REST API where documentation lacks usage examples?
+  \item \textbf{RQ1}. What impact does usage examples have on REST API client developer productivity?
+  \item \textbf{RQ2}. What problems API client developers face when using a REST API documentation that lacks usage examples?
+\end{itemize}
+.
+\subsection{Requirements} % (fold)
+
+To answer the aforementioned research questions, the study has the following requirements:
+
+\begin{itemize}
+  \item \textbf{R1. Realistic.} We had to choose an existing REST API that is currently used by API client developers. Selecting a mature REST API for this study reduces the possibility of an underdeveloped solution that may be found if a new or a seldom used API is selected. A familiar domain needed to be selected so that participants are able to relate to the API features without requiring upfront training. In addition to selecting the API, we had to select tasks that are related to the core features provided by the API to represent reality.
+  \item \textbf{R2. Time bound.} The total time spent by each participant is required to be time bound to measure productivity. As a result, the study needs to be setup such that participants are able to focus on performing the tasks minimizing any overhead.
+  \item \textbf{R3. Experienced developers.} Developers with prior experience on REST APIs need to be recruited as study participants to perform the study within a limited amount of time and in a realistic setup
 \end{itemize}
 
 
-
-\subsection{Requirements} % (fold)
 \subsection{Study Object} % (fold)
 \subsection{Study Design} % (fold)
 \subsubsection{Tasks} % (fold)
@@ -425,6 +433,8 @@ This research is aimed at answering the following research questions:
 \subsubsection{Data Analysis: Success, Failure, Partial} % (fold)
 
 \section{Results}
+
+
 
   Observation and Implications
     For each task, describe the results. Provide examples of failed attempts with counts, and relate to the documentation sources to share an observation. Imply what needs to be done.
